[package]
name = "rustbustion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluer = { version = "0.16.1", features = ["full"] }
bytes = "1"
env_logger = "0.10.1"
futures = "0.3.29"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
log = "0.4.20"
modular-bitfield = "0.11.2"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", optional = true }
