[package]
name = "rustbustion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
aws-config = "1"
aws-sdk-s3 = "1"
aws-smithy-types = "1"
anyhow = "1.0.77"
bytes = "1"
chrono = "0.4.31"
env_logger = "0.10.1"
futures = "0.3.29"
handlebars = "5"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
log = "0.4.20"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", optional = true }
xflags = "0.3.2"

[[bin]]
name = "webapp"

[[bin]]
name = "rustbustion"
features = ["dep:bluer"]

[target.'cfg(target_os = "macos")'.dependencies]
rand = "0.8.5"

[target.'cfg(target_os = "linux")'.dependencies]
bluer = { version = "0.16.1", features = ["full"], optional = true }
modular-bitfield = "0.11.2"
